Fix scrollbar in devprofile page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -152,52 +152,58 @@ body {
 
 @keyframes fromright {
  0%{
-   right: 100%;
+  transform: translateX(-100%);
  }
  100% {
-   right: 0;
+  transform: translateX(0%);
  }
 }
 @-webkit-keyframes fromright {
  0%{
-   right: 100%;
+  transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
  }
  100% {
-   right: 0;
+  transform: translateX(0%);
+  -webkit-transform: translateX(0%);;
  }
 }
 
 @keyframes fromleft {
  0%{
-   left: 100%;
+  transform: translateX(100%);
  }
  100% {
-   left: 0;
+  transform: translateX(0%);
  }
 }
 @-webkit-keyframes fromleft {
  0%{
-   left: 100%;
+  transform: translateX(100%);
+  -webkit-transform: translateX(100%);
  }
  100% {
-   left: 0;
+  transform: translateX(0%);
+  -webkit-transform: translateX(0%);
  }
 }
 
 @keyframes frombottom {
  0%{
-   top: 100vh;
+  transform: translateY(100vh);
  }
  100% {
-   top: 0;
+  transform: translateY(0vh);
  }
 }
 @-webkit-keyframes frombottom {
  0%{
-   top: 100vh;
+  transform: translateY(100vh);
+  -webkit-transform: translateY(100vh);
  }
  100% {
-   top: 0;
+  transform: translateY(0vh);
+  -webkit-transform: translateY(0vh);
  }
 }
 
